--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
